ReSharper.FSharp/test/data/parsing/errors/Expr - New 01.fs
new (a, _) = Base(a)
